<resources>
    <string name="app_name">Dialog Demo</string>
    <string name="d1">Demo 1 - Simple Dialog</string>
    <string name="d2">Demo 2 - Buttons Dialog</string>
    <string name="enter">Enter Some Text</string>
    <string name="d3">Demo 3 - Text Input Dialog</string>
    <string name="ex3">Exercise 3</string>
    <string name="num1">Enter Number 1:</string>
    <string name="num2">Enter Number 2:</string>
    <string name="d4">Demo 4 - DatePicker Dialog</string>
    <string name="d5">Demo 5 - TimePicker Dialog</string>
</resources>
